--- a/laura-learning-nextjs/nextjs-dashboard/package.json
+++ b/laura-learning-nextjs/nextjs-dashboard/package.json
@@ -12,7 +12,7 @@
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "^14.2.14",
+    "next": "15.0.0-canary.184",
     "next-auth": "5.0.0-beta.19",
     "postcss": "8.4.38",
     "react": "19.0.0-rc-f38c22b244-20240704",
